--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,5 @@
 # .envrc is used by direnv (if installed) to automatically load the devshell
+watch_file "flake.nix"
+watch_file "flake.lock"
+watch_dir "nix/dev_shells"
 use flake . --impure
