--- a/.github/workflows/update_dependencies.yaml
+++ b/.github/workflows/update_dependencies.yaml
@@ -18,14 +18,14 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v5
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+        uses: DeterminateSystems/nix-installer-action@v20
       - name: Update flake.lock
-        uses: DeterminateSystems/update-flake-lock@main
+        uses: DeterminateSystems/update-flake-lock@v27
         with:
           pr-title: "deps: update Nix flake dependencies"
           pr-labels: |
             automated
             dependencies
             nix
-          token: ${{ secrets.UPDATE_DEPENDENCIES_TOKEN }}
+          token: ${{ secrets.PR_BOT_PERSONAL_ACCESS_TOKEN }}
 ...
