--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build all packages
         run: |
           set -euxo pipefail
-          packageNames=$(nix eval --json "$flake#packages.$system" | jq -r 'keys[]')
+          packageNames=$(nix eval --json ".#packages.x86_64-linux" | jq -r 'keys[]')
           for package in "${packageNames[@]}"; do
             nix build .#${package} --no-link
           done
