--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,21 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v5
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@v20
+      - name: Build all packages
+        run: |
+          set -euo pipefail
+          mapfile -t packageNames < <(nix eval --json ".#packages.x86_64-linux" | jq -r 'keys[]')
+          for package in "${packageNames[@]}"; do
+            nix build .#${package} --no-link
+          done
   check:
     name: Check
     runs-on: ubuntu-latest
@@ -22,7 +37,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v5
       - name: Install Nix
-        uses: DeterminateSystems/nix-installer-action@main
+        uses: DeterminateSystems/nix-installer-action@v20
       - name: Check flake
         run: nix flake check --impure
 ...
