--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,11 @@
-# .envrc is used by direnv (if installed) to automatically load the devshell
+# .envrc is used by direnv (if installed) to automatically load the development environment.
+
+# Reload environment when these directories/files change.
+watch_dir "dev_shells"
 watch_file "flake.nix"
 watch_file "flake.lock"
-watch_dir "nix/dev_shells"
+
+# Load the Nix development shell.
+USER_SHELL="$SHELL"
 use flake . --impure
+export SHELL="$USER_SHELL"
